--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "npx nodemon ./bin/www localhost 3000"
+    "start": "npx nodemon ./bin/www localhost 3000"
+  },
+  "engines": {
+    "node": "~10.4.1",
+    "npm": "~6.1.0"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
