--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npx nodemon ./bin/www localhost 3000"
+    "start": "npx nodemon ./bin/www localhost 3000",
+    "test": "npx nodemon --inspect ./bin/www localhost 3000"
   },
   "engines": {
     "node": "~10.4.1",
